Improve UI and Validations

--- a/main/tracker/templates/dashboard.html
+++ b/main/tracker/templates/dashboard.html
@@ -105,9 +105,9 @@
     <div class="row mb-5">
       <div class="col">
         <div class="bg-dark p-4 rounded-3 shadow-sm">
-          <h5 class="mb-4">Resume Match Scores <span style="color:red">*</span></h5>
+          <h5 class="mb-4">Resume Match Scores <span style="" class="text-danger">*</span></h5>
           <form id="resumeForm" enctype="multipart/form-data">
-            <input type="file" name="resume" class="form-control mb-3" required />
+            <input type="file" name="resume" class="form-control mb-3" required accept=".pdf, .doc, .docx" />
             <button type="submit" class="btn btn-warning">Upload & Match</button>
           </form>
 
