--- a/main/tracker/templates/document_library.html
+++ b/main/tracker/templates/document_library.html
@@ -63,7 +63,7 @@
 
     <!-- Document Table -->
     <div class="bg-dark p-4 rounded-3 shadow-sm">
-      <h4 class="mb-4 text-warning">📄 Your Uploaded Documents</h4>
+      <h4 class="mb-4 text-warning">Your Uploaded Documents</h4>
       {% if documents %}
         <div class="table-responsive">
           <table class="table table-dark table-striped table-hover align-middle">
