--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,12 +5,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-      crossorigin="anonymous"
-    />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"></script>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -168,6 +166,11 @@ Elevatr
                 >Wishlist</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="{% url 'live_job_list'%}"
+                >Job Feed</a
+              >
+            </li>
             {% endif %}
             <li class="nav-item">
               <a class="nav-link text-light" href="{% url 'contact' %}"
@@ -213,16 +216,12 @@ Elevatr
         <p class="mb-1">
           &copy; 2025 <strong>Elevatr</strong> — All rights reserved.
         </p>
-        <small class="text-muted"
-          >Built with ❤️ • Designed for job seekers</small
-        >
+        <small class="text-muted">
+        Built with ❤️ • Designed for job seekers • by 
+        <a href="https://www.linkedin.com/in/waqas-rashid1" target="_blank" class="text-warning text-decoration-none fw-semibold">Waqas Rashid</a>
+        </small>
       </div>
     </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qX6qeKkUO0sJzZl6Dd6Kl8N6rRvZz2+jtdZUJbcQ+8KSc4Ot+1gdr0XDmzfdEibn"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
